--- a/src/main/resources/templates/reserve.html
+++ b/src/main/resources/templates/reserve.html
@@ -26,22 +26,15 @@
     <div class="container">
         <hr>
         <form action="">
+            <label for="">Име</label>
+            <label for="">Презиме</label>
+            <label for="">Презиме</label>
 
         </form>
 
     </div>
     <br>
     <hr>
-    <ul class="pagination justify-content-center">
-        <li class="page-item"><a href="#" class="page-link">Prev</a></li>
-        <li class="page-item"><a href="#" class="page-link">1</a></li>
-        <li class="page-item"><a href="#" class="page-link">2</a></li>
-        <li class="page-item active"><a href="#" class="page-link">3</a></li>
-        <li class="page-item"><a href="#" class="page-link">4</a></li>
-        <li class="page-item"><a href="#" class="page-link">5</a></li>
-        <li class="page-item"><a href="#" class="page-link">6</a></li>
-        <li class="page-item"><a href="#" class="page-link">Next</a></li>
-    </ul>
     <hr>
     <p>Copyright <span>&#169;</span> Your Website 2022</p>
 </div>
