--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -12,11 +12,11 @@
 <div class="container pt-4">
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="container-fluid">
-            <a href="#" class="navbar-brand ">Home</a>
+            <a href="/" class="navbar-brand ">Home</a>
         </div>
         <ul class="navbar-nav me-auto">
-            <li class="nav-item"><a href="#" class="nav-link">За нас</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Контакт</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
         </ul>
     </nav>
     <br>
