--- a/src/main/resources/templates/reserve.html
+++ b/src/main/resources/templates/reserve.html
@@ -12,11 +12,10 @@
 <div class="container pt-4">
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="container-fluid">
-            <a href="#" class="navbar-brand ">Home</a>
+            <a href="/" class="navbar-brand ">Home</a>
         </div>
         <ul class="navbar-nav me-auto">
             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
             <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
         </ul>
     </nav>
@@ -28,16 +27,16 @@
         <form action="/reserve/make-appointment/" method="post">
             <label for="name">Име</label>
             <input type="text" id="name">
-
+            <br>
             <label for="lastname">Презиме</label>
             <input type="text" id="lastname">
-
+            <br>
             <label for="trainer">Тренер</label>
             <input type="radio" id="trainer">
-
+            <br>
             <label for="time">Време</label>
             <input type="datetime-local" id="time">
-
+            <br>
             <button type="submit">Резервирај термин</button>
         </form>
 
