--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -48,7 +48,7 @@
         <li class="page-item"><a href="#" class="page-link">Next</a></li>
     </ul>
     <hr>
-    <p>Copyright <span>&#169;</span> Your Website 2022</p>
+    <p>Copyright <span>&#169;</span> FitPoint App  2022</p>
 </div>
 </body>
 </html>
