--- a/src/main/resources/templates/reserve.html
+++ b/src/main/resources/templates/reserve.html
@@ -20,7 +20,7 @@
         </ul>
     </nav>
     <br>
-    <h3>Welcome to FItPoint App</h3>
+    <h3>Резервирајте термин веднаш</h3>
     <br>
     <div class="container">
         <hr>
@@ -44,7 +44,7 @@
     <br>
     <hr>
     <hr>
-    <p>Copyright <span>&#169;</span> Your Website 2022</p>
+    <p>Copyright <span>&#169;</span> FitPoint App 2022</p>
 </div>
 </body>
 </html>
