reserviranjeto sve e napraeno ama nesto ne go naogja kontrolerot - ako moze nekoj da vidi dali znae sto e dodeka baram

--- a/src/main/resources/templates/reserve.html
+++ b/src/main/resources/templates/reserve.html
@@ -24,7 +24,7 @@
     <br>
     <div class="container">
         <hr>
-        <form action="/reserve/make-appointment/" method="post">
+        <form th:action="@{'/reserve/make-appointment/{id}' (id=${gym.getId()})}" method="POST">
             <label for="name">Име</label>
             <input type="text" id="name">
             <br>
