many to many kaj trainer i gym napraveno 1

--- a/src/main/resources/templates/appointment-created.html
+++ b/src/main/resources/templates/appointment-created.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Appointment is succesfully created</h1>
+<h1>Appointment is successfully created</h1>
+<a href="/">Back to home</a>
 </body>
 </html>
