--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -15,8 +15,8 @@
             <a href="/" class="navbar-brand ">Home</a>
         </div>
         <ul class="navbar-nav me-auto">
-            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+            <li class="nav-item"><a href="/login" class="nav-link">Login</a></li>
+            <li class="nav-item"><a href="/logout" class="nav-link">Logout</a></li>
         </ul>
     </nav>
     <br>
